Tuning tree generation